--- a/index.html
+++ b/index.html
@@ -20,10 +20,30 @@
                 <div class="previous-operand">123</div>
                 <!--Bottom output screen-->
                 <div class="current-operand">50</div>
-
             </div>
-
+            <button class="span-two">AC</button>
+            <button data-delete>DEL</button>
+            <!--Divide-->
+            <button data-operation>&divide</button>
+            <button data-number>1</button>
+            <button data-number>2</button>
+            <button data-number>3</button>
+            <!--Multiplication-->
+            <button data-operation>&times</button>
+            <button data-number>4</button>
+            <button data-number>5</button>
+            <button data-number>6</button>
+            <!--Addition-->
+            <button data-operation>&#43</button>
+            <button data-number>7</button>
+            <button data-number>8</button>
+            <button data-number>9</button>
+            <!--Minus-->
+            <button data-operation>&#8722</button>
+            <!--Period-->
+            <button data-number>&#46</button>
+            <button data-number>0</button>
+            <button class="span-two">&#61</button>
         </div>
-
     </body>
 </html>
