--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!--Stylesheet-->
         <link href="/style.css" rel="stylesheet">
         <!--JS script-->
-        <script src="script.js" defer></script>
+        <script src="/script.js" defer></script>
     </head>
     <body>
         <!--Entire calculator will be wrapped-->
@@ -17,9 +17,9 @@
             <!--Output screen-->
             <div class="output">
                 <!--Top output screen-->
-                <div class="previous-operand">123</div>
+                <div class="previous-operand"></div>
                 <!--Bottom output screen-->
-                <div class="current-operand">50</div>
+                <div class="current-operand"></div>
             </div>
             <button class="span-two">AC</button>
             <button data-delete>DEL</button>
