--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <!--Output screen-->
             <div class="output">
                 <!--Top output screen-->
-                <div class="previous-operand"></div>
+                <div data-previous-operand class="previous-operand"></div>
                 <!--Bottom output screen-->
-                <div class="current-operand"></div>
+                <div data-current-operand class="current-operand"></div>
             </div>
-            <button class="span-two">AC</button>
+            <button data-all-clear class="span-two">AC</button>
             <button data-delete>DEL</button>
             <!--Divide-->
             <button data-operation>&divide</button>
@@ -43,7 +43,8 @@
             <!--Period-->
             <button data-number>&#46</button>
             <button data-number>0</button>
-            <button class="span-two">&#61</button>
+            <!--Equals-->
+            <button data-equals class="span-two">&#61</button>
         </div>
     </body>
 </html>
