--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button data-number>2</button>
             <button data-number>3</button>
             <!--Multiplication-->
-            <button data-operation>&times</button>
+            <button data-operation>*</button>
             <button data-number>4</button>
             <button data-number>5</button>
             <button data-number>6</button>
