--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+    Simple webpage to show a calculator web app.
+    This is for practicing purposes only.
+    I followed this repo: https://github.com/WebDevSimplified/Vanilla-JavaScript-Calculator
+-->
 <!DOCTYPE html>
 <html>
     <head lang="en" dir="ltr">
